WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292698
Ignore WebContent logs from certain subsystems
https://bugs.webkit.org/show_bug.cgi?id=292698
Summary
Ignore WebContent logs from certain subsystems
Per Arne Vollan
Reported
2025-05-07 17:57:18 PDT
Ignore WebContent logs from certain subsystems.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-07 17:57:29 PDT
<
rdar://problem/150894829
>
Per Arne Vollan
Comment 2
2025-05-07 18:04:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45092
EWS
Comment 3
2025-05-09 13:04:46 PDT
Committed
294727@main
(4461bf078491): <
https://commits.webkit.org/294727@main
> Reviewed commits have been landed. Closing PR #45092 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug