Ignore WebContent logs from certain subsystems https://bugs.webkit.org/show_bug.cgi?id=292698 rdar://150894829

Reviewed by Chris Dumez.

We can ignore log messages from XPC and CoreAnalytics. These messages are only related to errors when
establishing XPC connections, since we are blocking all XPC services in the WebContent process.

* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::shouldIgnoreLogMessage):
(WebKit::WebProcess::registerLogHook):

Canonical link: https://commits.webkit.org/294727@main